# open-terminalui

./: README.md  pyproject.toml  test.py
open_terminalui/: __init__.py  __main__.py  main.py
src/open_terminalui/: app.py  chat_manager.py  document_manager.py  memory_manager.py  models.py  storage.py  styles.css  styles.tcss
src/open_terminalui/components/: chat_message.py
src/open_terminalui/tools/: __init__.py
