[project]
name = "open-terminalui"
version = "0.1.0"
description = "A terminal UI for interacting with Ollama and local LLM models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.47.0",
    "ollama>=0.4.0",
    "aiofiles>=24.1.0",
    "prek>=0.2.19",
]

[project.scripts]
open-terminalui = "open_terminalui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
